<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <EditText
        		android:id="@+id/editText1"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:ems="10"
        		android:inputType="text"
        		android:hint="@string/hint1" >
    			<requestFocus />
    		</EditText>

    	<LinearLayout
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content" >

        	<EditText
           		android:id="@+id/editText2"
            	android:layout_width="160dp"
            	android:layout_height="wrap_content"
            	android:ems="10"
            	android:hint="@string/hint2"
        		android:maxLength="8"
            	android:gravity="center"
            	android:inputType="textPassword" />
        	
        	<EditText
        		android:id="@+id/editText4"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:ems="10"
        		android:maxLength="8"
        		android:gravity="center"
        		android:hint="@string/randomText"
        		android:inputType="numberPassword" />
        
    	</LinearLayout>

    	<EditText
        	android:id="@+id/editText3"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:inputType="textMultiLine"
        	android:hint="@string/hint3" />

    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<Button
            	android:id="@+id/button1"
            	android:layout_width="160dp"
            	android:layout_height="wrap_content"
            	android:text="@string/Button1"
            	android:onClick="onClickEncrypt" />

        	<Button
            	android:id="@+id/button2"
            	android:layout_width="160dp"
            	android:layout_height="wrap_content"
            	android:text="@string/Button2"
            	android:onClick="onClickLoad" />

    	</LinearLayout>
    
        	<Button
        		android:id="@+id/button5"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/Button5" />

    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<Button
            	android:id="@+id/button3"
            	android:layout_width="160dp"
            	android:layout_height="wrap_content"
            	android:text="@string/Button3" />

        	<Button
            	android:id="@+id/button4"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/Button4" />

    	</LinearLayout>

    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >
         
        	<TextView
            	android:id="@+id/dspNumber"
            	android:layout_width="0dip"
            	android:layout_height="50dp"
            	android:layout_weight="0.86"
            	android:gravity="center"
            	android:hint="@string/securmsg"
            	android:text="@string/randomNumber"
            	android:textAppearance="?android:attr/textAppearanceLarge" />

        	<ImageButton
            	android:id="@+id/randButton"
            	android:layout_width="50dp"
            	android:layout_height="50dp"
            	android:contentDescription="@string/desc"
            	android:src="@android:drawable/ic_popup_sync" />

    	</LinearLayout>
    </LinearLayout>
</ScrollView>